--- a/Buildingblocks/CMakeLists.txt
+++ b/Buildingblocks/CMakeLists.txt
@@ -18,3 +18,12 @@ list(APPEND LIBS pthread)
 
 add_executable(thread_example thread_example.cpp)
 target_link_libraries(thread_example PUBLIC ${LIBS})
+
+add_executable(mem_pool_example mem_pool_example.cpp)
+target_link_libraries(mem_pool_example PUBLIC ${LIBS})
+
+add_executable(lf_queue_example lf_queue_example.cpp)
+target_link_libraries(lf_queue_example PUBLIC ${LIBS})
+
+add_executable(logging_example logging_example.cpp)
+target_link_libraries(logging_example PUBLIC ${LIBS})
